Black Goose with Jen's Kitchen
Added Jen's Kitchen to Black Goose

--- a/bistro/index.html
+++ b/bistro/index.html
@@ -23,8 +23,17 @@
      font-size: 1em;
     }
     </style>
-  <head>
+</head>
     <body>
+<nav>
+  <ul>
+    <li><a href="../index.html">Home</a></li>
+    <li><a href="/menu.html">Menu</a></li>
+    <li><a href="./bgnews.html">News</a></li>
+    <li><a href="/contact.html"></a>Contact</li>
+    <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+  </ul>
+</nav>
 <h1>Black Goose Bistro</h1>
 <h2>The Restaurant</h2>
 <p>The Black Goose Bistro offers casual lunch and dinner fare in a relaxed
