--- a/bgnews.html
+++ b/bgnews.html
@@ -25,6 +25,15 @@
     </style>
 </head>
     <body>
+<nav>
+  <ul>
+    <li><a href="./index.html">Home</a></li>
+    <li><a href="./menu.html">Menu</a></li>
+    <li><a href="./bgnews.html">News</a></li>
+    <li><a href="./contact.html"></a>Contact</li>
+    <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+  </ul>
+</nav>
 <h1>Black Goose Bistro</h1>
 <h2>The Black Goose Bistro News</h2><nav> <ul>  <li>Home</li> <li>Menu</li> <li>News</li> <li>Contact</li>
 </ul>
