--- a/bgnews.html
+++ b/bgnews.html
@@ -25,16 +25,16 @@
     </style>
 </head>
     <body>
+<h1>Black Goose Bistro</h1>
 <nav>
   <ul>
-    <li><a href="./index.html">Home</a></li>
-    <li><a href="./menu.html">Menu</a></li>
-    <li><a href="./bgnews.html">News</a></li>
-    <li><a href="./contact.html"></a>Contact</li>
-    <li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li>
+    <p><li><a href="./index.html">Home</a></li></p>
+    <p><li><a href="./menu.html">Menu</a></li></p>
+    <p><li><a href="./bgnews.html">News</a></li></p>
+    <p><li><a href="./contact.html">Contact</a></li></p>
+    <p><li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li></p>
   </ul>
 </nav>
-<h1>Black Goose Bistro</h1>
 <h2>The Black Goose Bistro News</h2><nav> <ul>  <li>Home</li> <li>Menu</li> <li>News</li> <li>Contact</li>
 </ul>
 </nav>
