--- a/bistro/bgnews.html
+++ b/bistro/bgnews.html
@@ -26,6 +26,15 @@
 </head>
     <body>
 <h1>Black Goose Bistro</h1>
+<nav>
+  <ul>
+    <p><li><a href="./index.html">Home</a></li></p>
+    <p><li><a href="./menu.html">Menu</a></li></p>
+    <p><li><a href="./bgnews.html">News</a></li></p>
+    <p><li><a href="./contact.html">Contact</a></li></p>
+    <p><li><a href="jenskitchen/jenskitch.html">Jen's Kitchen</a></li></p>
+  </ul>
+</nav>
 <h2>The Black Goose Bistro News</h2><nav> <ul>  <li>Home</li> <li>Menu</li> <li>News</li> <li>Contact</li>
 </ul>
 </nav>
