--- a/resume/index.html
+++ b/resume/index.html
@@ -4,9 +4,8 @@
   <meta charset="utf-8">
   <title> Tessa Schrock's Resume </title>
 <style>
-  }
   body {
-    background-color: grey
+    background-color: #EFE8F1;
     margin: 0 10%;
     font-family: garamond;
   }
@@ -20,7 +19,7 @@
    margin-top: 30px;
   }
   h2 {
-   color: #white;
+   color: #FFFFFF;
    font-size: 2em;
   }
   h3 {
@@ -86,7 +85,7 @@ a:visited {
 <body>
   <div class="freemyboi">
     <h1> About Me </h1>
-    <h5> <p> I am a Seminole State College student, currently pursuing my associate's degree for art.
+    <h5> I am a Seminole State College student, currently pursuing my associate's degree for art.
       I have been passionate for art since a young age, and got serious about it when I turned ten years old.
     Although I've worked with two dimensional work all of my life, <strong>I've recently discovered my love for three dimensional art.</strong> Since then, I've changed my major to pursue the medium.
     Aside from that, I've really come to love video games. they've helped me develop problem-solving skills, patience, and surprisingly, hand-eye coordination.
@@ -95,21 +94,22 @@ a:visited {
   <li>Overwatch 2</li>
 <li>Apex Legends</li>
 <li>Final Fantasy XIV</li>
-<li>ARK: Survival Evolved</li> </p> </h5>
+<li>ARK: Survival Evolved</li>
+</h5>
 </ul>
   </div>
   <div class="parent">
     <h2> Tessa Schrock </h2>
     <h3> Digital Art Student </h3>
   <div class="child">
-    <h3> Social Media <h3>
+    <h3> Social Media </h3>
     <h4> <a href="https://github.com/tessaschrock/fid" target=blank> GitHub </a> </h4>
     <a href="https://www.artstation.com/tessaschrock" target=blank> <h4> Artstation </h4> </a>
 </div>
 </div>
 <div class="freemyboi">
   <h1> Work Samples </h1>
-  <h5> <p> Below are a few of my work samples, ranging from work done in Photoshop and a few personal illustrations. </p>
+  <h5>Below are a few of my work samples, ranging from work done in Photoshop and a few personal illustrations. </h5>
 <img src="blender_donut.png" alt="Blender Donut" width="500" height="300">
 <img src="blender_glass.png" alt="Blender Glass Mug" width="500" height="300">
 <br>
@@ -138,6 +138,7 @@ a:visited {
   <li>Photo Manipulation</li>
   <li>UX/UI</li>
   <li>Digital Rendering</li>
+</ul>
 </div>
 <div class="parent">
   <div class="child">
@@ -147,5 +148,6 @@ a:visited {
     <li>Photoshop</li>
     <li>Autodesk Maya</li>
     <li>Blender</li>
+  </ul>
 </div>
 </html>
