--- a/resume/index.html
+++ b/resume/index.html
@@ -110,7 +110,7 @@ a:visited {
 <div class="freemyboi">
   <h1> Work Samples </h1>
   <h5>Below are a few of my work samples, ranging from work done in Photoshop and a few personal illustrations. </h5>
-<img src="blender_donut.png" alt="Blender Donut" width="500" height="300">
+<img src="donut.jpg" alt="Blender Donut" width="500" height="300">
 <img src="blender_glass.png" alt="Blender Glass Mug" width="500" height="300">
 <br>
 <img src="character_palettes.png" alt="Character Design Color Palettes" width="600" height="500">
