--- a/bistro/index.html
+++ b/bistro/index.html
@@ -44,10 +44,16 @@ footer img {
  margin-left: .5em;
  margin-right: .5em;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
     </style>
 </head>
     <body>
 <h1>Black Goose Bistro</h1>
+<a href="./order.html"><input type="image" src="order.png" alt="Order" width="150" height="64" class="center">
 <nav>
   <ul>
     <p><li><a href="../index.html">Home</a></li></p>
