--- a/resume/silhouette.html
+++ b/resume/silhouette.html
@@ -65,6 +65,13 @@ a:visited {
   text-align: left;
   color: black;
 }
+.freemyboipic {
+  position: absolute;
+  background-color: transparent;
+  padding-left: 0px;
+  text-align: left;
+  color: black;
+}
 .parent {
   background-color: #514854;
   width: 300px;
@@ -85,19 +92,13 @@ a:visited {
 </style>
 <body>
   <div class="freemyboi">
-    <h1> About Me </h1>
-    <h5> I am a Seminole State College student, currently pursuing my associate's degree for art.
-      I have been passionate for art since a young age, and got serious about it when I turned ten years old.
-    Although I've worked with two dimensional work all of my life, <strong>I've recently discovered my love for three dimensional art.</strong> Since then, I've changed my major to pursue the medium.
-    Aside from that, I've really come to love video games. they've helped me develop problem-solving skills, patience, and surprisingly, hand-eye coordination.
-    <br>Some of my current favorite games incude:
-  <ul class="boxlist">
-  <li>Overwatch 2</li>
-<li>Apex Legends</li>
-<li>Final Fantasy XIV</li>
-<li>ARK: Survival Evolved</li>
-</h5>
+    <h1> Character Design Silhouettes </h1>
+    <h5> This collection of illustrations are some of the very many renditions of the clothing design for my Dungeons & Dragons character. "A" and "B" are alternative version of how the coat fits on the character, while "1-4 are different shirt and corset designs. I eventually chose Coat B and shirt/corset #2. </h5>
 </ul>
+<div class="freemyboipic">
+<img src="images/character_silhouette.png" alt="Silhouettes" width=2000 height=1000>
+<a href="./index.html"> Home </a>
+  </div>
   </div>
   <div class="parent">
     <h2> Tessa Schrock </h2>
@@ -106,33 +107,6 @@ a:visited {
     <h3> Social Media </h3>
     <h4> <a href="https://github.com/tessaschrock/fid" target=blank> GitHub </a> </h4>
     <a href="https://www.artstation.com/tessaschrock" target=blank> <h4> Artstation </h4> </a>
-</div>
-</div>
-<div class="freemyboi">
-  <h1> Work Samples </h1>
-  <h5>Below are a few thumbnails of my work samples, ranging from work done in Photoshop and a few personal illustrations. Click on them to see the full size! </h5>
-
-
-<a href="./donut.html">
-<img src="images/donut_200.png" alt="Blender Donut" width="200" height="200">
-</a>
-
-<a href="./mug.html">
-<img src="images/glass.png" alt="Blender Mug" width="200" height="200">
-</a>
-<a href="./palette.html">
-<img src="images/palettes.png" alt="Color Palettes" width="200" height="200">
-</a>
-<br>
-<a href="./silhouette.html">
-<img src="images/silhouettes.png" alt="Character Silhouette Designs" width="200" height="200">
-</a>
-<a href="./surreal.html">
-<img src="images/universe_200.png" alt="Universe Photoshop" width="200" height="200">
-</a>
-<a href="./family.html">
-<img src="images/family.png" alt="Family Photo Fixed" width="200" height="200">
-</a>
 </div>
 </div>
 <div class="parent">
