--- a/resume/donut.html
+++ b/resume/donut.html
@@ -68,9 +68,9 @@ a:visited {
 .freemyboipic {
   position: absolute;
   background-color: transparent;
-  padding-left: 0px;
   text-align: left;
   color: black;
+  margin-top: -260px;
 }
 .parent {
   background-color: #514854;
@@ -93,51 +93,25 @@ a:visited {
 <body>
   <div class="freemyboi">
     <h1> Blender Donut </h1>
-    <h5> This rendering of a donut is my very first project in Blender, I followed <a href="https://www.youtube.com/c/BlenderGuruOfficial" target=blank> Blender Guru's </a> Blender 2.8 tutorial.
+    <h5> This rendering of a donut is my very first project in Blender, I followed Blender Guru's Blender 2.8 tutorial.
     It was this exact project that made me fall in love with doing 3D art! I plan on remaking this in the future with the newer 3.0 tutorial and perhaps some of my own knowledge to take
   a different spin on it. </h5>
-</ul>
 <div class="freemyboipic">
-<img src="images/donut.jpg" alt="Blender Donut">
-<a href="./index.html"> Home </a>
+<img src="images/donut.svg" alt="Blender Donut" width=1000 height=1000>
   </div>
   </div>
   <div class="parent">
     <h2> Tessa Schrock </h2>
     <h3> Digital Art Student </h3>
   <div class="child">
-    <h3> Social Media </h3>
-    <h4> <a href="https://github.com/tessaschrock/fid" target=blank> GitHub </a> </h4>
-    <a href="https://www.artstation.com/tessaschrock" target=blank> <h4> Artstation </h4> </a>
+    <h3> <a href="index.html"> Back to Home Page </a> </h3>
 </div>
 </div>
 <div class="parent">
-  <div class="child">
-      <h3>Skills</h3>
+<div class="child">
+<h3> <a href="https://www.youtube.com/c/BlenderGuruOfficial" target=blank> Blender Guru's Channel </h3> </a>
 </div>
-<br>
-<br>
-<ul>
-  <li>Graphite Drawing</li>
-  <li>Digital Illustration</li>
-  <li>Web Development</li>
-  <li>CSS</li>
-  <li>Java Script</li>
-  <li>3D Asset Creation</li>
-  <li>Animation</li>
-  <li>Photo Manipulation</li>
-  <li>UX/UI</li>
-  <li>Digital Rendering</li>
-</ul>
 </div>
 <div class="parent">
-  <div class="child">
-    <h3>Software</h3>
-  <ul>
-    <li>Clip Studio Paint</li>
-    <li>Photoshop</li>
-    <li>Autodesk Maya</li>
-    <li>Blender</li>
-  </ul>
 </div>
 </html>
