--- a/resume/palette.html
+++ b/resume/palette.html
@@ -94,48 +94,19 @@ a:visited {
   <div class="freemyboi">
     <h1> Character Design Color Palettes </h1>
     <h5> This collection of illustrations is part of the process I went through designing my Dungeons & Dragons character. I created 10 potential color combinations with different aspects such as the warmth of the colors, contrast, and value. I ultimately went with #1, while making a few tweaks. </h5>
-</ul>
 <div class="freemyboipic">
-<img src="images/character_palettes.png" alt="Character Design Color Palette" width=1500 height=1200>
-<a href="./index.html"> Home </a>
+<img src="images/palettes.svg" alt="Character Design Color Palette" width=1000 height=1000>
   </div>
   </div>
   <div class="parent">
     <h2> Tessa Schrock </h2>
     <h3> Digital Art Student </h3>
   <div class="child">
-    <h3> Social Media </h3>
-    <h4> <a href="https://github.com/tessaschrock/fid" target=blank> GitHub </a> </h4>
-    <a href="https://www.artstation.com/tessaschrock" target=blank> <h4> Artstation </h4> </a>
+        <h3> <a href="index.html"> Back to Home Page </a> </h3>
 </div>
 </div>
 <div class="parent">
-  <div class="child">
-      <h3>Skills</h3>
-</div>
-<br>
-<br>
-<ul>
-  <li>Graphite Drawing</li>
-  <li>Digital Illustration</li>
-  <li>Web Development</li>
-  <li>CSS</li>
-  <li>Java Script</li>
-  <li>3D Asset Creation</li>
-  <li>Animation</li>
-  <li>Photo Manipulation</li>
-  <li>UX/UI</li>
-  <li>Digital Rendering</li>
-</ul>
 </div>
 <div class="parent">
-  <div class="child">
-    <h3>Software</h3>
-  <ul>
-    <li>Clip Studio Paint</li>
-    <li>Photoshop</li>
-    <li>Autodesk Maya</li>
-    <li>Blender</li>
-  </ul>
 </div>
 </html>
