--- a/resume/family.html
+++ b/resume/family.html
@@ -71,6 +71,7 @@ a:visited {
   padding-left: 0px;
   text-align: left;
   color: black;
+  margin-top: -260px;
 }
 .parent {
   background-color: #514854;
@@ -94,48 +95,19 @@ a:visited {
   <div class="freemyboi">
     <h1> Family Portrait Fix </h1>
     <h5> This photoshopped piece is a comparison of a tarnished family photo, fixed in photoshop to look brand new and improved. The left is the after, the right is before. </h5>
-</ul>
-<div class="freemyboipic">
-<img src="images/family_portrait.jpg" alt="Family Portrait" width=1000 height=750>
-<a href="./index.html"> Home </a>
-  </div>
-  </div>
-  <div class="parent">
-    <h2> Tessa Schrock </h2>
-    <h3> Digital Art Student </h3>
-  <div class="child">
-    <h3> Social Media </h3>
-    <h4> <a href="https://github.com/tessaschrock/fid" target=blank> GitHub </a> </h4>
-    <a href="https://www.artstation.com/tessaschrock" target=blank> <h4> Artstation </h4> </a>
-</div>
-</div>
-<div class="parent">
-  <div class="child">
-      <h3>Skills</h3>
-</div>
-<br>
-<br>
-<ul>
-  <li>Graphite Drawing</li>
-  <li>Digital Illustration</li>
-  <li>Web Development</li>
-  <li>CSS</li>
-  <li>Java Script</li>
-  <li>3D Asset Creation</li>
-  <li>Animation</li>
-  <li>Photo Manipulation</li>
-  <li>UX/UI</li>
-  <li>Digital Rendering</li>
-</ul>
-</div>
-<div class="parent">
-  <div class="child">
-    <h3>Software</h3>
-  <ul>
-    <li>Clip Studio Paint</li>
-    <li>Photoshop</li>
-    <li>Autodesk Maya</li>
-    <li>Blender</li>
-  </ul>
-</div>
-</html>
+    <div class="freemyboipic">
+    <img src="images/family.svg" alt="Character Design Color Palette" width=1000 height=1000>
+      </div>
+      </div>
+      <div class="parent">
+        <h2> Tessa Schrock </h2>
+        <h3> Digital Art Student </h3>
+      <div class="child">
+            <h3> <a href="index.html"> Back to Home Page </a> </h3>
+    </div>
+    </div>
+    <div class="parent">
+    </div>
+    <div class="parent">
+    </div>
+    </html>
