--- a/bistro/gallery/burgers.html
+++ b/bistro/gallery/burgers.html
@@ -28,9 +28,8 @@ h1 {
 
 <h1>Gallery: The Best Burgers</h1>
 
-<p></p>
-
-<p><a href="index.html">[Back to Gallery]</a></p>
+<p><img src="photos/burgers-800.jpg" alt="close-up of burgers." width="800" height="600"></p>
+<p><a href="../gallery.html">[Back to Gallery]</a></p>
 
 </body>
 </html>
