--- a/bistro/gallery/fish.html
+++ b/bistro/gallery/fish.html
@@ -27,10 +27,9 @@ h1 {
 <body>
 
 <h1>Gallery: Catch of the Day</h1>
+<p><img src="photos/fish-800.jpg" alt="close-up of fried fish." width="800" height="600"></p>
 
-<p></p>
-
-<p><a href="index.html">[Back to Gallery]</a></p>
+<p><a href="../gallery.html">[Back to Gallery]</a></p>
 
 </body>
 </html>
