--- a/cat_cafe/about.html
+++ b/cat_cafe/about.html
@@ -42,7 +42,7 @@
     <li> Although we know it's important for the entire family to get to know a cat before adopting, we do not allow guests under five years of age. Minors aged 12 and younger must be accopmanied and supervised by an adult.</li><br>
     <li> If a young guest is bothering the cats physically or through sound, your party may be asked to leave. Please respect the staff's decision, you will be given a partial refund. </li>
 </ul> </h3></div> <br>
-<div class="footer"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="footer"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
 <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
 <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
 Email: cuppacatfe@fakeemail.com <br> <br>
