--- a/cat_cafe/adopt.html
+++ b/cat_cafe/adopt.html
@@ -52,7 +52,7 @@
 <img src="cats/ulysses_200.png" alt="Ulysses" width="150" height="150">
 <img src="cats/winston_200.png" alt="Winston" width="150" height="150">
 </div>
-<div class="footer"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="footer"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
 <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
 <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
 Email: cuppacatfe@fakeemail.com <br> <br>
