--- a/cat_cafe/foodmenu.html
+++ b/cat_cafe/foodmenu.html
@@ -32,7 +32,7 @@
   <h3> Lickable Puree <br> Catnip <br> Crunchy Bites <br> <b><u> Warning: NOT for human consumption. </b></u></h3>
   </div>
   <br>
-<div class="footer"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="footer"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
 <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
 <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
 Email: cuppacatfe@fakeemail.com <br> <br>
