--- a/cat_cafe/index.html
+++ b/cat_cafe/index.html
@@ -25,7 +25,7 @@
 relaxing environment for all and we appreciate any and all patronage. <br> <br>
   Thinking of stopping by? We highly recommend booking in advance! </h3> <br> <h2> 374 cats adopted since opening! </h2>
 </div>
-<div class="indexfooter"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="indexfooter"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
   <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
   <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
   Email: cuppacatfe@fakeemail.com <br> <br>
