--- a/cat_cafe/book.html
+++ b/cat_cafe/book.html
@@ -35,7 +35,7 @@
   </form>
 </div>
 </div>
-<div class="footer"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="footer"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
 <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
 <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
 Email: cuppacatfe@fakeemail.com <br> <br>
