--- a/cat_cafe/confirmation.html
+++ b/cat_cafe/confirmation.html
@@ -23,7 +23,7 @@
   <h3> Disclaimer: No email will be sent to you, no information has been saved. This website is purely fictional.</h3>
 </div>
 </div>
-<div class="footer"><h4><img src="images/c@.svg" width=30px height=30px>Location & Hours<img src="images/c@.svg" width=30px height=30px> </h4>
+<div class="footer"><h4><img src="images/C@.svg" width=30px height=30px>Location & Hours<img src="images/C@.svg" width=30px height=30px> </h4>
 <b>Cuppa Catfe</b><br>123 E. Mortan Ave. <br> Spokane, WA 12345 <br> <br>
 <b> Contact Us: </b> <br> Number: (123) 456-7890 <br>
 Email: cuppacatfe@fakeemail.com <br> <br>
