--- a/cat_cafe/about.html
+++ b/cat_cafe/about.html
@@ -52,7 +52,7 @@ Thurs: Closed
 Fri-Su: 12pm - 6pm <Br><br><Br>
 <center><i>Sign up here for our newsletter to get special promotions, exclusive event invites, and photos/updates of our cats!</i></center>
   <form action="confirmation.html">
-<center><label for="email">  </label> <input type="text" id="email" class="infoinput" placeholder="Your email goes here."></center><br>
+  <center><label for="email">  </label> <input type="text" id="email" class="infoinput" placeholder="Your email goes here." required></center><br>
   <center><button type="submit" value="Submit"> Submit </button></center>
 </form>
 <div class="disclaimer">
