--- a/cat_cafe/index.html
+++ b/cat_cafe/index.html
@@ -35,7 +35,7 @@ relaxing environment for all and we appreciate any and all patronage. <br> <br>
   Fri-Su: 12pm - 6pm <Br><br><Br>
   <center><i>Sign up here for our newsletter to get special promotions, exclusive event invites, and photos/updates of our cats!</i></center>
     <form action="confirmation.html">
-  <center><label for="email">  </label> <input type="text" id="email" class="infoinput" placeholder="Your email goes here."></center><br>
+  <center><label for="email">  </label> <input type="text" id="email" class="infoinput" placeholder="Your email goes here." required></center><br>
   <center><button type="submit" value="Submit" a href="./index.html"> Submit </button></center>
   </form>
   <div class="disclaimer">
