--- a/cat_cafe/about.html
+++ b/cat_cafe/about.html
@@ -16,6 +16,7 @@
     <a href="./adopt.html"><p class="hover-underline-animation">Adoptable Cats</p></a>
     <a href="./drinkmenu.html"><p class="hover-underline-animation">Drink Menu</p></a>
     <a href="./foodmenu.html"><p class="hover-underline-animation">Food Menu</p></a>
+      <a href="https://spokanehumanesociety.org/" target=blank><p class="hover-underline-animation"> Spokane Humane Society </p> </a>
 </div>
 <div class="content">
       <img src="images/cuppa.png" alt="Cuppa Logo" width=300px height=300px>
