--- a/resume/donut.html
+++ b/resume/donut.html
@@ -3,93 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title> Tessa Schrock's Resume </title>
-<style>
-  body {
-    background-color: #AFA6B2;
-    margin: 0 10%;
-    font-family: garamond;
-  }
-  h1 {
-   text-align: center;
-   font-family: garamond;
-   font-weight: bold;
-   text-transform: uppercase;
-   color: #36303A;
-   border-bottom: 2px solid #36303A;
-   padding: 1px;
-   margin-top: 30px;
-  }
-  h2 {
-   color: #FFFFFF;
-   font-size: 2em;
-  }
-  h3 {
-   color: white;
-   font-size: 1.2em;
-  }
-  h5 {
-    color: ##36303A;
-    font-size: 1em;
-    font-weight: normal;
-  }
-  ul {
-    text-align: left;
-    list-style-position: inside;
-  }
-  .boxlist {
-    list-style-position: inside;
-    text-align: left
-  }
-  .boxlist2 {
-    list-style-position: inside;
-    text-align: center
-  }
-  .freelist {
-    list-style-position: inside;
-    text-align: left
-  }
-a:link {
-  color: white;
-  background-color: transparent;
-  text-decoration: underline;
-}
-a:visited {
-  color: white;
-  background-color: transparent;
-  text-decoration: underline;
-}
-.freemyboi {
-  position: absolute;
-  background-color: transparent;
-  padding-left: 320px;
-  text-align: left;
-  color: black;
-}
-.freemyboipic {
-  position: absolute;
-  background-color: transparent;
-  text-align: left;
-  color: black;
-  margin-top: -260px;
-}
-.parent {
-  background-color: #514854;
-  width: 300px;
-  height: 300px;
-  padding: 1px;
-  color: white;
-  position: relative;
-  text-align: center;
-}
-.child {
-  background-color: #36303A;
-  width: 300px;
-  height: 50px;
-  color: white;
-  position: absolute;
-  text-align: center;
-}
-</style>
+  <link rel="stylesheet" href="resumestyle.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter">
 <body>
   <div class="freemyboi">
     <h1> Blender Donut </h1>
