--- a/cat_cafe/adopt.html
+++ b/cat_cafe/adopt.html
@@ -32,10 +32,10 @@
       <li>If you have other cats: Proof of FEL/FIV combo test, current FVRPC & Rabies vaccination, and your veternarian's phone number.</li>
       <li>Three phone numbers for references, please notify them that we will reach out to them.</li>
       <li>A cat carrier. If you don't have one, you may purchase one from us.</li><br>
-      <h3> You must be aged 18 years or older and have a valid photo ID to proove such. If you have other cats, they must be spayed/neutered and be properly vaccinated.
-      Once the adoption form is filled and reviewed, the cat will be put on hold and a home visit will be conducted. We also ask to bring any other dogs or cats
-    and children to have a famil meet & greet. We have the facility to do so safely! <br> If you know which cat you wish to adopt, please write their name in the comment section
-  of our booking form!</h3>
+      <h3> You must be aged 18 years or older and have a valid photo ID to prove such. If you have other cats, they must be spayed/neutered and be properly vaccinated.
+      Once the adoption form is filled in person and reviewed, the cat will be put on hold and a home visit will be conducted. We also ask to bring any other dogs or cats
+    and children to have a family meet & greet. We have the facility to do so safely! <br> If you know which cat you wish to adopt, please write their name in the comment section
+  of our booking form!</h3><br>
 <img src="cats/aslan_200.png" alt="Aslan" width="150" height="150">
 <img src="cats/athena_200.png" alt="Athena" width="150" height="150">
 <img src="cats/charlie_200.png" alt="Charlie" width="150" height="150">
